# OpenGL

./: CMakeLists.txt  glad.c  main.cpp
FirstTriangle/: Triangle.cpp
MathLibrary/: Vector3.h
include/glad/: glad.h
